MOBI-768 Menu Button wraps long text - wrapping long text fixed by redesigning css so that the button now expands with the text - added default button styling and removed custom menu button cosmetic styling

--- a/icemobile/branches/icemobile-1.3.0/icemobile/resources/themes/android_light/1_button_ext.scss
+++ b/icemobile/branches/icemobile-1.3.0/icemobile/resources/themes/android_light/1_button_ext.scss
@@ -90,7 +90,6 @@
     border-radius: 0;
     height: 38px;
     line-height: 22px;
-    box-sizing: border-box;
 }
 .mobi-pagePanel-header div.mobi-button-back {
     height: 23px;
